--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,9 +1,13 @@
 body{
   background-color: hsl(185, 75%, 39%);
+  background-image: url("../images/bg-pattern-top.svg"), url("../images/bg-pattern-bottom.svg");
+  background-repeat: no-repeat no-repeat;
   font-family: 'Kumbh Sans', sans-serif;
   font-size: 18px;
   text-align: center;
+  background-position-x: -765px, 130px; background-position-y: -600px, 300px;
 }
+/*768*/
 
 h1,
 h2{
@@ -31,11 +35,14 @@ hr{
   flex-direction: column;
   width: 325px;
   background-image: url("../images/bg-pattern-card.svg");
+  background-size: 100%;
   background-repeat: no-repeat;
   background-color: whitesmoke;
-  background-position: top left;
+  background-position: top center;
+  background-size: 375px;
   border-radius: 15px;
-  margin: 25% auto;
+  margin: 20vh auto;
+  box-shadow: 0 50px 30px rgba(45,50,72, 0.15);
 }
 
 .profilePicture{
@@ -60,6 +67,10 @@ hr{
 .title h1, .title p{
   margin-top: 25px;
   margin-bottom: 0;
+}
+
+.title p, .state{
+  color: hsl(227, 10%, 46%)
 }
 
 .state{
@@ -93,5 +104,8 @@ hr{
   padding-top: 5px;
 }
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+footer {
+  font-size: 11px;
+  margin: auto; 
+}
+footer a { color: hsl(228, 45%, 44%); }
